--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "react-bootstrap": "2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "7.2.0",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "7.2.0"
   },
   "devDependencies": {
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "gh-pages": "^6.3.0",
     "loader-utils": "3.2.1",
-    "typescript": "5.7.2"
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "predeploy": "yarn build",
